# batty

./: CHANGELOG.md  Cargo.toml  README.md
src/: battery.rs  cli.rs  main.rs  thresholds.rs  tui.rs
