[package]
name = "batty"
version = "0.2.0"
authors = ["Nico Estrada <estradanicolas@gmail.com>"]
edition = "2021"
description = "Battery Health Tool for Linux"
license = "MIT"
repository = "https://github.com/nicoestrada/batty"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
